[workspace]
members = ["programs/*", "dynamic-bonding-curve-sdk"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anchor-client = "0.32.1"
bytemuck = "1.20.0"
ruint = "1.14.0"